# 6DoF_Rocketsim

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  skills.md
.github/workflows/: ci.yml
TC-1/: Hypertek_440CC125J-J250.csv  TC1_main.cpp  parameters.cpp  parameters.hpp  thrust.cpp  thrust.hpp
Vertsim/: Vertsim_2D.m
include/hrocket/: barrowman.hpp  dispersion.hpp  io.hpp  math.hpp  models.hpp  simulator.hpp
samples/: thrust.csv  vehicle.csv  vehicle_control.csv  vehicle_control_4fin.csv  vehicle_control_symmetric.csv  wind.csv
scripts/: build_mingw.ps1
src/: barrowman.cpp  csv.cpp  dispersion.cpp  gui_win32.cpp  io.cpp  main_cli.cpp  simulator.cpp
tests/: core_tests.cpp
